@@ -9,6 +9,7 @@
 - Improved: [#19764] Miscellaneous scenery tab now grouped next to the all-scenery tab.
 - Improved: [#19830] “Highlight path issues” will now hide wall elements.
 - Fix: [#12598] Number of holes is not set correctly when saving track designs.
+- Fix: [#13130] Android always defaulting to UK locale for language, currency and temperature.
 - Fix: [#18895] Responding mechanic blocked at level crossing.
 - Fix: [#19231] Crash due to null pointer to previously deleted banner in tile copy/paste functionality
 - Fix: [#19296] Crash due to a race condition for parallel object loading.
